--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <activity
-            android:name="com.kilobolt.zombiebird.AndroidLauncher"
+            android:name=".MainActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
